<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/addNewAlarmBtn"
        android:layout_gravity="center|bottom"
        android:background="@drawable/custom_rectangle_for_days_picker">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">


            <CheckBox
                android:id="@+id/select_days_popup_menu_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:textColor="@android:color/holo_blue_dark"/>
            <CheckBox
                android:id="@+id/select_days_popup_menu_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:textColor="@android:color/holo_blue_dark"/>
            <CheckBox
                android:id="@+id/select_days_popup_menu_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:textColor="@android:color/holo_blue_dark"/>
            <CheckBox
                android:id="@+id/select_days_popup_menu_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:textColor="@android:color/holo_blue_dark"/>
            <CheckBox
                android:id="@+id/select_days_popup_menu_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:textColor="@android:color/holo_blue_dark"/>
            <CheckBox
                android:id="@+id/select_days_popup_menu_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:textColor="@android:color/holo_blue_dark"/>
            <CheckBox
                android:id="@+id/select_days_popup_menu_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:textColor="@android:color/holo_blue_dark"/>

            <ImageButton
                android:id="@+id/select_days_popup_menu_close"
                android:layout_gravity="center_horizontal"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ok_mark"
                tools:src="@drawable/ok_mark"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"/>


        </LinearLayout>

    </FrameLayout>

</LinearLayout>